# rvisor-kernel

./: .gitignore  .gitmodules  Cargo.toml  README.md  make.rb
kernel-async/: Cargo.toml
kernel-async/src/: lib.rs
linux-kernel-module-rust/: .gitignore  .make_script.yaml  Cargo.toml  build.rs  make.rb  syscall.rb  syscall_table.html
linux-kernel-module-rust/klogger/: Cargo.toml
linux-kernel-module-rust/klogger/src/: lib.rs
linux-kernel-module-rust/src/: bindings.rs  bindings_raw.rs  error.rs  lib.rs  log.rs  logger.rs  user_ptr.rs
linux-kernel-module-rust/src/syscall/: cshim.rs  hook.rs  hook_syscall.c  hook_syscall.h  kernel_call.c  make.rb  mod.rs  num.rs  orig.rs  syscall.c
linux_kernel_module_rust/: build.rs
linux_kernel_module_rust/src/syscall/: orig.rs
rvisor-linux-kernel-module/src/syscall/: .gitignore
rvisor-zcore-hal/: Cargo.toml
rvisor-zcore-hal/src/: lib.rs  user.rs
