[package]
name = "kernel-async"
version = "0.1.0"
authors = ["dnailz <dnailzb@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
woke = "0.0.2"
spin = "0.5.2"
log = "0.4"
env_logger = "0.7.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]