[package]
name = "lkm"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>", "Yuantian Ding <dnailzb@outlook.com>"]
edition = "2018"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = ["jquery", "uglifier", "session"]

[dependencies]
bitflags = "1"

[build-dependencies]
bindgen = "0.51.0"
cc = "1.0"
shlex = "0.1"
glob = "0.3.0"
